<resources>
    <string name="app_name">Time Clock</string>
    <string name="facebook_app_id">627077307500706</string>
    <string name="fb_login_protocol_scheme">fb627077307500706</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_barcode_scanner">barcode_scanner</string>
    <string name="main_page_company">Company</string>
    <string name="employee_hint_text">The employee ID will be used to create the barcode ID number and string</string>
    <string name="first_name_default_text">No user found!</string>
</resources>
