<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.salamandra.timeclock.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@mipmap/ic_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:text="SALAMANDRA"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"

                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:text="paulgmurdoch@gmail.com"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:text="84216123"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorTextIcons"
                android:textStyle="bold"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/email_register_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="@color/colorTextIcons"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/facebook"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:scaleType="fitCenter"
                    android:layout_weight="0.5"
                    android:src="@mipmap/facebooklogo"
                    android:background="@color/colorFaceBook"
                    android:adjustViewBounds="true"
                    android:padding="12dp"
                    android:cropToPadding="false"
                    android:layout_alignParentTop="false" />

                <ImageButton
                    android:id="@+id/twitter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentTop="false"
                    android:padding="3dp"
                    android:scaleType="fitCenter"
                    android:layout_weight="0.5"
                    android:src="@mipmap/twitterlogo"
                    android:background="@color/colorTwitter"
                    />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
